Lesson 48) Business Theme HTML & CSS Part C Styled the static pages.

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,6 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/">
 
-
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/fontawesome.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -17,8 +16,8 @@
 
 <body>
 
-<div class="container">
-    <div class="header clearfix">
+<div class="header clearfix">
+    <div class="container">
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li role="presentation"><a href="index.html">Home</a></li>
@@ -28,17 +27,19 @@
         </nav>
         <img src="img/logo.png" alt="Logo">
     </div>
+</div>
 
-    <section class="row title-bar">
-        <div class="container">
-            <div class="col-md-12">
-                <h1>Blog</h1>
-            </div>
+<section class="row title-bar">
+    <div class="container">
+        <div class="col-md-12">
+            <h1>Blog</h1>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section class="marketing">
-        <div class="container row">
+<section class="marketing">
+    <div class="container">
+        <div class="row">
             <div class="col-md-8">
                 <article class="post row">
                     <div class="col-md-5">
@@ -115,42 +116,28 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section class="row content-region-1 pt50 pb40">
-        <div class="container">
-            <div class="col-md-12">
-                <h1>Clean Bootstrap Wordpress Theme</h1>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis dolor,
-                    doloremque error expedita facilis incidunt, necessitatibus officiis perferendis perspiciatis porro
-                    quae quidem voluptate? Autem modi odit provident reiciendis veniam.</p>
-            </div>
+<section class="row content-region-1 pt50 pb40">
+    <div class="container">
+        <div class="col-md-12">
+            <h1>Clean Bootstrap Wordpress Theme</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis dolor,
+                doloremque error expedita facilis incidunt, necessitatibus officiis perferendis perspiciatis porro
+                quae quidem voluptate? Autem modi odit provident reiciendis veniam.</p>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section class="content-region-2 pt40 pb40">
-        <div class="row container">
-            <div class="col-md-5">
-                <img src="img/pic1.jpg" alt="">
-            </div>
-            <div class="col-md-7">
-                <h3>Theme Features</h3>
-                <ul class="list-group">
-                    <li class="list-group-item"><i class="fa fa-check" aria-hidden="true"></i>Clean Code</li>
-                    <li class="list-group-item"><i class="fa fa-check" aria-hidden="true"></i>Custom Showcase Area</li>
-                    <li class="list-group-item"><i class="fa fa-check" aria-hidden="true"></i>Bootstrap Framework</li>
-                    <li class="list-group-item"><i class="fa fa-check" aria-hidden="true"></i>Multiple Color Choices
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
+<footer class="footer content-region-3 pt30 pb40">
 
-    <footer class="footer">
-        <div class="container row">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-4"><h4>Heading</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto at distinctio esse illo
-                    incidunt, laborum libero neque nesciunt officia optio, placeat porro quae rem sapiente sequi, sint
+                    incidunt, laborum libero neque nesciunt officia optio, placeat porro quae rem sapiente sequi,
+                    sint
                     ut velit.</p>
             </div>
             <div class="col-lg-4">
@@ -178,9 +165,8 @@
                 </form>
             </div>
         </div>
-    </footer>
-
-</div>
+    </div>
+</footer>
 
 
 </body>
