--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
 
 <body>
 
-<div class="container">
-    <div class="header clearfix">
+<div class="header clearfix">
+    <div class="container">
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li role="presentation"><a href="index.html">Home</a></li>
@@ -28,17 +28,20 @@
         </nav>
         <img src="img/logo.png" alt="Logo">
     </div>
+</div>
 
-    <section class="row title-bar">
-        <div class="container">
-            <div class="col-md-12">
-                <h1>About Us</h1>
-            </div>
+<section class="row title-bar">
+    <div class="container">
+        <div class="col-md-12">
+            <h1>About Us</h1>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section class="marketing">
-        <div class="container row">
+
+<section class="marketing">
+    <div class="container">
+        <div class="row">
             <div class="col-md-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur culpa cupiditate, eaque fugit
                     inventore numquam quidem quos ullam! Adipisci beatae dolor laudantium maiores qui. Culpa eum facilis
@@ -67,39 +70,23 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section class="row content-region-1 pt50 pb40">
-        <div class="container">
-            <div class="col-md-12">
-                <h1>Clean Bootstrap Wordpress Theme</h1>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis dolor,
-                    doloremque error expedita facilis incidunt, necessitatibus officiis perferendis perspiciatis porro
-                    quae quidem voluptate? Autem modi odit provident reiciendis veniam.</p>
-            </div>
+<section class="row content-region-1 pt50 pb40">
+    <div class="container">
+        <div class="col-md-12">
+            <h1>Clean Bootstrap Wordpress Theme</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis dolor,
+                doloremque error expedita facilis incidunt, necessitatibus officiis perferendis perspiciatis porro
+                quae quidem voluptate? Autem modi odit provident reiciendis veniam.</p>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section class="content-region-2 pt40 pb40">
-        <div class="row container">
-            <div class="col-md-5">
-                <img src="img/pic1.jpg" alt="">
-            </div>
-            <div class="col-md-7">
-                <h3>Theme Features</h3>
-                <ul class="list-group">
-                    <li class="list-group-item"><i class="fa fa-check" aria-hidden="true"></i>Clean Code</li>
-                    <li class="list-group-item"><i class="fa fa-check" aria-hidden="true"></i>Custom Showcase Area</li>
-                    <li class="list-group-item"><i class="fa fa-check" aria-hidden="true"></i>Bootstrap Framework</li>
-                    <li class="list-group-item"><i class="fa fa-check" aria-hidden="true"></i>Multiple Color Choices
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="container row">
+<footer class="footer content-region-3 pt30 pb40">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-4"><h4>Heading</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto at distinctio esse illo
                     incidunt, laborum libero neque nesciunt officia optio, placeat porro quae rem sapiente sequi, sint
@@ -130,10 +117,8 @@
                 </form>
             </div>
         </div>
-    </footer>
-
-</div>
-
+    </div>
+</footer>
 
 </body>
 </html>
